# shiritori-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: hello.rs
src/: game.rs  lib.rs  main.rs  word.rs
src/word/: word_list.rs
src/words/: pokemon.json
